--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
         <script src="materialize/js/materialize.min.js" type="text/javascript"></script>
         <script src="angular/angular.min.js"></script>
         <script src="angular/angular-route.min.js"></script>
-
-        <script type="text/javascript" src="script.js"></script>
+        
+        <script src="js/script.js" type="text/javascript"></script>
+        <!--<script type="text/javascript" src="script.js"></script>-->
         <script src="js/app.js"></script>
         <script src="js/controller.js"></script>
         <script src="js/thumbnailscript.js"></script>
