--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <script src="angular/angular.min.js"></script>
         <script src="angular/angular-route.min.js"></script>
 
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controller.js"></script>
         <script src="js/thumbnailscript.js"></script>
