List view page and Thumbanil page icons set properly and removed hoverable color.

--- a/dynamic/thumbnail.html
+++ b/dynamic/thumbnail.html
@@ -13,8 +13,17 @@ and open the template in the editor.
 
     <!--<div class="ignore"></div>-->
     <div class="main_content"> 
+        <div class ="sub_content"><!--sub_content-->
+            <!--#wrap-->
 
-        <div class ="sub_content">
+                <h3 class="left">All Devices </h3>
+                
+                <div class="right"> <!--list_style_buttons-->
+                    <a href="#/thumbnail" id="gridview" class="switcher hide-on-small-only left"><i class="material-icons">grid_on</i></a>
+                    <a href="#/devices" id="listview" class="switcher active hide-on-small-only left"><i class="material-icons">view_list</i></a>
+
+                </div>
+<!--        <div class ="sub_content">
             <div id="wrap">
 
 
@@ -25,7 +34,7 @@ and open the template in the editor.
                 </span>
                 <h1>All Devices</h1>
 
-            </div>
+            </div>-->
 
         </div>
 
