--- a/dynamic/request.html
+++ b/dynamic/request.html
@@ -248,7 +248,7 @@
                     </select>
 
 <!--                    <label style="alignment-adjust: middle"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Duration</label>-->
-                </div> 
+                </div>
                 
                 <p>{{now}}</p>
             </div>
@@ -258,7 +258,7 @@
         </div>   
         <!--now button end-->
         <!--later button start-->
-        <div id="modal22" class="modal" style="width: 100%;max-height: 100%;height: 100%;">
+        <div id="modal22" class="modal" style="width: 100%; height: 100%; max-height: 100%;">
             <div class="modal-content">
                 <h4>Borrow Later</h4>
                 <div class="input-field">
