--- a/dynamic/devices.html
+++ b/dynamic/devices.html
@@ -29,7 +29,7 @@
             <center>
                 <ul class="devicelist">
                     <!--device cf--> 
-                    <li ng-animate= "'animate'"  class = "hoverable card-panel row" ng-repeat="item in devices| filter: query"> 
+                    <li class = "hoverable card-panel row" ng-repeat="item in devices| filter: query"> 
                         <!--<div class="row">-->
                         <a href="#/details/{{devices.indexOf(item)}}">
                             <div class="info col s1 m1 l1 hide-on-small-only vertical-line" style="height: 16%;width: 5px; background-color: green;float: left; " > </div>
