--- a/dynamic/devices.html
+++ b/dynamic/devices.html
@@ -36,7 +36,7 @@
                             <div class="info col s1 m1 l1 hide-on-med-and-up vertical-line" style="height: 18%;width: 5px; background-color: green;float: left; " > </div>
 
                             <div class="col s11 m3 l4 hide-on-med-and-up " style="float: none">
-                                <img  style="width: 45%" ng-src="images/{{item.shortname}}.jpg">
+                                <img  style="width: 45%" ng-src="images/{{item.image_no}}.jpg">
                             </div>
 
                             <div class="info col s12 m5 l5">
@@ -44,7 +44,7 @@
                                 <h3  class="col s12 m11 l11 "> {{item.name}} </h3>
 
                                 <h4 class="col s12 m11 l11"> Type : {{item.type}} </h4>
-                                <h4 class="col s12 m11 l11"> Platform : {{item.Platform}} </h4>
+                                <h4 class="col s12 m11 l11"> Platform : {{item.platform}} </h4>
                                 <h4 class="col s12 m11 l11"> Owned by : {{item.Sub_Product_Area}} </h4>
                                 <br>
                                 <h4 class="col s12 m11 l11"> Currently with : {{item.Sub_Product_Area}}  </h4>
@@ -52,16 +52,10 @@
                             </div>
 
                             <div class="col s11 m3 l4 hide-on-small-only">
-                                <img  style="width: 55%" ng-src="images/{{item.shortname}}.jpg">
+                                <img  style="width: 55%" ng-src="images/{{item.image_no}}.jpg">
                             </div>
                         </a>
-                        <!--                        <div class="buttonClass col s12 m2 l2" >
-                                                    <button style="margin-top:  20px" type="button" class="Now waves-effect waves-light btn col s5 m12 l12">Now</button>
-                                                    <p class="col s1 hide-on-med-and-up"> </p>
-                                                    <button style="margin-top:  20px" type="button" class="Later waves-effect waves-light btn col s5 m12 l12">Later</button>
-                        
-                                                </div>-->
-
+                      
                         <div class="buttonClass col s12 m2 l2" >
                             <button style="margin-top:  20px" type="button" data-target="modal1" class="waves-effect waves-light btn modal-trigger col s5 m11 l11"> Now </button>
                             <p class="col s1 hide-on-med-and-up"> </p>
