--- a/dynamic/details.html
+++ b/dynamic/details.html
@@ -81,10 +81,10 @@ and open the template in the editor.
             <div class="device cf" ng-model="devices">
 
                 <div class="col s12 m3 l4 hide-on-med-and-down">
-                    <img  style="width: 20%; " ng-src="images/{{devices[whichItem].shortname}}.jpg">
+                    <img  style="width: 20%; " ng-src="images/{{devices[whichItem].image_no}}.jpg">
                 </div>
                 <div class="col s12 m3 l4 hide-on-large-only">
-                    <img  style="width: 40%; margin-top: 130px" ng-src="images/{{devices[whichItem].shortname}}.jpg">
+                    <img  style="width: 40%; margin-top: 130px" ng-src="images/{{devices[whichItem].image_no}}.jpg">
                 </div>
 
                 <!--                <img ng-src="images/{{devices[whichItem].shortname}}.jpg">  -->
@@ -92,7 +92,7 @@ and open the template in the editor.
                 <div class="info">
 
                     <h2> Type : {{devices[whichItem].type}}</h2>
-                    <h3> Platform : {{devices[whichItem].Platform}}</h3>
+                    <h3> Platform : {{devices[whichItem].platform}}</h3>
                     <h3> OS : {{devices[whichItem].OS}}</h3>
                     <h3> Belongs to : {{devices[whichItem].Sub_Product_Area}}</h3>
                     <h3> Size : {{devices[whichItem].Size}}</h3>
