--- a/dynamic/thumbnail.html
+++ b/dynamic/thumbnail.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                         <a href="#/details/{{devices.indexOf(item)}}">
                             <div class="info col s1 m1 l1 hide-on-small-only vertical-line" style="height: 20%;width: 10px; background-color: green;float: left; " > </div>
                             <!--                        <div class="info col s1 m1 l1 hide-on-med-and-up vertical-line" style="height: 18%;width: 5px; background-color: green;float: left; " > </div>-->
-                            <img  ng-src="images/{{item.shortname}}.jpg">
+                            <img  ng-src="images/{{item.image_no}}.jpg">
                             <div class="info">
                                 <h3> {{item.name}} </h3>
 
